--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "whale-card",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
   "keywords": [
     "whale-card"
