--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "watchify": "^3.9.0"
   },
   "dependencies": {
+    "rxjs": "^5.2.0",
     "weui": "^1.1.1",
     "wx.d.ts": "^0.10.102800"
   }
