--- a/package.json
+++ b/package.json
@@ -14,15 +14,29 @@
   "devDependencies": {
     "@types/node": "^7.0.5",
     "gulp": "^3.9.1",
+    "gulp-better-rollup": "^1.1.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-filter": "^5.0.0",
+    "gulp-main-npm-files": "^1.0.5",
+    "gulp-npm-files": "^0.1.3",
     "gulp-rename": "^1.2.2",
+    "gulp-require-file": "^1.1.2",
+    "gulp-rollup": "^2.13.0",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.1.5",
     "gulp-util": "^3.0.8",
+    "lodash.clonedeep": "^4.5.0",
+    "rimraf": "^2.6.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "run-sequence": "^1.2.2",
+    "typescript": "^2.5.0-dev.20170624",
     "watchify": "^3.9.0"
   },
   "dependencies": {
-    "rxjs": "^5.2.0",
-    "weui": "^1.1.1",
+    "@types/lodash": "^4.14.66",
+    "lodash": "^4.17.4",
     "wx.d.ts": "^0.10.102800"
   }
 }
